--- a/src/pages/Projects/SectionCard.css
+++ b/src/pages/Projects/SectionCard.css
@@ -11,7 +11,6 @@
   }
 }
 
-/* SectionCard styles */
 .section-card {
   break-inside: avoid;
   background-color: var(--bg-color);
@@ -27,7 +26,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 12px;
+  margin: 0px 0px 12px 0px;
   font-weight: 300;
   font-size: 1.4rem;
 }
