--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --bg-color: #020917;
+  --bg2-color: #000e28;
   --text-color: #fff;
   --border-color: #fff;
   --link-hover: #646cff;
@@ -9,6 +10,7 @@
 
 body.dark-mode {
   --bg-color: #fff;
+  --bg2-color: #dadada;
   --text-color: #020917;
   --border-color: #020917;
   --link-hover: #646cff;
@@ -28,7 +30,11 @@ body,
   padding: 0;
   min-height: 100vh;
   font-family: Inter, sans-serif;
-  background-color: var(--bg-color);
+  background-image: linear-gradient(
+    180deg,
+    var(--bg-color) 0%,
+    var(--bg2-color) 70%
+  );
   color: var(--text-color);
   display: flex;
   flex-direction: column;
@@ -52,8 +58,30 @@ main.projects-main {
   width: 100%;
 }
 
+@keyframes slideInUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+section:nth-of-type(1) {
+  animation-delay: 0.1s;
+}
+section:nth-of-type(2) {
+  animation-delay: 0.5s;
+}
+section:nth-of-type(3) {
+  animation-delay: 0.9s;
+}
+
 section {
   margin: 20px 0 40px;
+  opacity: 0;
+  animation: slideInUp 0.6s ease-out forwards;
 }
 
 section h2 {
@@ -90,14 +118,15 @@ section hr {
 @media (min-width: 1200px) {
   main {
     width: 50%;
-    transition: width 1s ease-in-out;
   }
 
   main.projects-main {
     width: 80%;
+    transition: width 1s ease-in-out;
   }
   main.photography-main {
     width: 98%;
     padding: 0px;
+    transition: width 1s ease-in-out;
   }
 }
