--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 footer {
   padding: 20px 25px;
   text-align: center;
-  background-color: var(--bg-color);
+  background-color: var(--bg2-color);
   color: var(--text-color);
 }
 
