--- a/src/pages/Projects/SectionCard.css
+++ b/src/pages/Projects/SectionCard.css
@@ -27,6 +27,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  margin-top: 0px;
   margin-bottom: 12px;
   font-weight: 300;
   font-size: 1.4rem;
