update footer + extracurricular

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,11 @@ section {
 }
 
 section h2 {
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+section h3 {
   font-weight: 300;
   margin-bottom: 10px;
 }
